@@ -24,7 +24,7 @@
 /*
  * @test
  * @bug      8250768 8261976 8277300 8282452 8287597 8325325 8325874 8297879
- *           8331947 8281533 8343239 8318416 8346109 8359024
+ *           8331947 8281533 8343239 8318416 8346109 8359024 8386589
  * @summary  test generated docs for items declared using preview
  * @library  /tools/lib ../../lib
  * @modules jdk.javadoc/jdk.javadoc.internal.tool
@@ -239,6 +239,42 @@ public class TestPreview extends JavadocTester {
                 </div>
                 <div class="block">Preview feature</div>
                 </div>
+                """);
+    }
+
+    // 8386589 pre-existing permanent API that is later retrofitted
+    // to permit a @PreviewFeature API should not be flagged as a preview feature
+    @Test
+    public void nonPreviewPermitsPreview(Path base) throws IOException {
+        Path src = base.resolve("src");
+        tb.writeJavaFiles(src, """
+                package p;
+                public sealed interface Core permits BasicChild, PreviewChild {
+                }
+                """, """
+                package p;
+                public non-sealed interface BasicChild extends Core {
+                }
+                ""","""
+                package p;
+                import jdk.internal.javac.PreviewFeature;
+                @PreviewFeature(feature = PreviewFeature.Feature.TEST)
+                public non-sealed interface PreviewChild extends Core {
+                }
+                """);
+        javadoc("-d", "out-non-preview-permits-preview",
+                "--add-exports", "java.base/jdk.internal.javac=ALL-UNNAMED",
+                "--source-path",
+                src.toString(),
+                "p");
+        checkExit(Exit.OK);
+        checkOutput("p/Core.html", false,
+                """
+                <div class="preview-comment">Programs can only use <code>Core</code> when preview features are enabled.</div>
+                """);
+        checkOutput("p/PreviewChild.html", true,
+                """
+                <div class="preview-comment">Programs can only use <code>PreviewChild</code> when preview features are enabled.</div>
                 """);
     }
 
